# live-interpreter

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  tauri.conf.json
.github/workflows/: ci.yml  release.yml
benches/: translate_latency.rs
capabilities/: default.json
desktop/: index.html
docs/: architecture-refactor-fsm.md  control-panel.md  meeting-client.md  native-desktop.md  ovt-app.md  qwen3-tts-contract.md  rust-native-inference.md  teams-bot-bridge.md  teams-realtime.md
scripts/: build-gpu.sh  create-virtual-mic.sh  create-virtual-teams-mic.sh  cuda-env.sh  download-translate-model.sh  download-whisper-model.sh  install-live-interpreter-desktop.sh  install-ovt-desktop.sh  install-qwen3-tts-rs.sh  list-audio.sh  open-live-interpreter-control.sh  open-live-interpreter-desktop.sh  open-ovt-app.sh  run-realtime-en-to-es-captions.sh  run-realtime-es-to-en.sh  start-live-interpreter-control.sh  start-live-interpreter-desktop.sh  start-local-stack.sh  start-meeting-client.sh  start-ovt-app.sh  start-qwen3-tts.sh  stop-local-stack.sh  uninstall-live-interpreter-desktop.sh  uninstall-ovt-desktop.sh
src/: asr.rs  capture.rs  config.rs  desktop.rs  events.rs  lib.rs  main.rs  mesh.rs  mesh_pipeline.rs  pipeline.rs  quality.rs  routes.rs  runtime.rs  translate.rs  tts.rs  types.rs  virtual_mic.rs  voice.rs  vram.rs
src/translate/: candle.rs  http.rs  mod.rs
static/: fsm-ui.html  index.html
tests/: mesh_real_pipeline.rs  mesh_roundtrip.rs
