[package]
name = "olares-voice-translator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
cpal = "0.16.0"
hound = "3.5.1"
reqwest = { version = "0.12.24", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "signal", "fs", "sync", "time"] }
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
whisper-rs = "0.16.0"

[features]
default = []
cuda = ["whisper-rs/cuda"]
