[package]
name = "live-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.9", features = ["multipart", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
cpal = "0.16.0"
futures-util = "0.3.31"
hound = "3.5.1"
reqwest = { version = "0.12.24", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "signal", "fs", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
whisper-rs = "0.16.0"
tauri = { version = "2.11.3", optional = true }

# Native translation backend (Option B). Heavy; off by default.
candle-core = { version = "0.11", optional = true }
candle-transformers = { version = "0.11", optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["onig"], optional = true }
tokio-stream = { version = "0.1", optional = true }
libp2p = { version = "0.56.0", features = ["tokio", "tcp", "noise", "yamux", "mdns", "gossipsub", "request-response", "macros"] }
bincode = "1.3.3"
async-trait = "0.1.89"
# Real-time NVIDIA VRAM telemetry. Loads libnvidia-ml.so at runtime (libloading); no build-time CUDA dep.
nvml-wrapper = "0.12"

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
cuda = ["whisper-rs/cuda"]
desktop-native = ["tauri"]
# In-process candle translation (CPU). Combine with candle-cuda / candle-metal for GPU.
translate-candle = ["dep:candle-core", "dep:candle-transformers", "dep:tokenizers", "dep:tokio-stream"]
candle-cuda = ["translate-candle", "candle-core/cuda", "candle-transformers/cuda"]
candle-metal = ["translate-candle", "candle-core/metal", "candle-transformers/metal"]

[[bench]]
name = "translate_latency"
harness = false

[[bin]]
name = "live-interpreter-desktop"
path = "src/bin/live-interpreter-desktop.rs"
required-features = ["desktop-native"]
