[package]
name = "live-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.9", features = ["multipart", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
cpal = "0.16.0"
futures-util = "0.3.31"
hound = "3.5.1"
reqwest = { version = "0.12.24", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "signal", "fs", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
whisper-rs = "0.16.0"

libp2p = { version = "0.56.0", features = ["tokio", "tcp", "noise", "yamux", "mdns", "gossipsub", "request-response", "macros"] }
bincode = "1.3.3"
async-trait = "0.1.89"
tokio-util = { version = "0.7", features = ["rt"] }
# Native PipeWire virtual mic (in-process source node). Optional: needs
# libpipewire-0.3-dev + libclang at build time. Behind the `native-audio` feature.
pipewire = { version = "0.8", optional = true }
# Real-time NVIDIA VRAM telemetry. Loads libnvidia-ml.so at runtime (libloading); no build-time CUDA dep.
nvml-wrapper = "0.12"

# In-process quantized-LLM translation backend (Candle). Optional: heavy to compile, so the
# default build stays on the Ollama HTTP backend. Behind the `candle-translate` feature.
# GPU comes from the `cuda` feature via weak-dep activation (candle-core?/cuda) — needs nvcc.
candle-core = { version = "0.11", optional = true }
candle-transformers = { version = "0.11", optional = true }
tokenizers = { version = "0.23", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
# GPU for Whisper (whisper-rs) and, when `candle-translate` is also on, for the
# Candle translation backend (weak-dep activation — only if candle-core is built).
cuda = ["whisper-rs/cuda", "candle-core?/cuda", "candle-transformers?/cuda"]
# Native in-process PipeWire virtual microphone (replaces pw-loopback).
native-audio = ["dep:pipewire"]
# In-process quantized-LLM translation (Qwen2 GGUF via Candle) instead of Ollama.
candle-translate = ["dep:candle-core", "dep:candle-transformers", "dep:tokenizers"]

[[bench]]
name = "translate_latency"
harness = false

[[bin]]
name = "li-voice-demo"
path = "src/bin/li-voice-demo.rs"
required-features = ["native-audio"]

[[bin]]
name = "li-interpret"
path = "src/bin/li-interpret.rs"
required-features = ["native-audio"]

[[bin]]
name = "li-control"
path = "src/bin/li-control.rs"

[[bin]]
name = "li-mesh"
path = "src/bin/li-mesh.rs"
required-features = ["native-audio"]
